--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trent Sterling (Tront) | 🔗 Link Tree</title>
-    <meta name="description" content="Trent Sterling (Tront) is a game developer specializing in Unity, C#, and multiplayer networking. Explore his games, projects, and social links.">
-    <meta name="keywords" content="Trent Sterling, Tront, game developer, Unity, C#, VR, multiplayer, networking, procedural generation, shaders, game design, indie games">
-    <meta property="og:title" content="Trent Sterling (Tront) | Game Developer & Creator">
-    <meta property="og:description" content="Discover Trent Sterling's projects, including multiplayer games, VR experiences, and cutting-edge game development techniques.">
-    <meta property="og:url" content="https://trentsterling.com">
+    <title>Trent Sterling (Tront) - Game Developer | Unity, C#, VR & Multiplayer</title>
+    <meta name="description" content="Meet Trent Sterling (Tront), an expert game developer crafting immersive VR experiences & robust multiplayer games with Unity & C#. Explore projects, dev blog & links.">
+    <meta name="keywords" content="Trent Sterling, Tront, game developer, Unity, C#, VR, multiplayer, networking, procedural generation, shaders, game design, indie games, portfolio, links">
+    <link rel="canonical" href="https://tront.xyz/" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tront.xyz/">
+    <meta property="og:title" content="Trent Sterling (Tront) - Game Developer | Portfolio & Links">
+    <meta property="og:description" content="Discover Trent Sterling (Tront)'s work in game development, specializing in Unity, C#, VR, multiplayer networking, and procedural generation.">
     <meta property="og:image" content="https://blog.tront.xyz/assets/img/tront.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Trent Sterling (Tront) | Game Developer & Creator">
-    <meta name="twitter:description" content="Explore Trent Sterling's work in game development, VR, networking, and content creation.">
+    <meta name="twitter:url" content="https://tront.xyz/">
+    <meta name="twitter:title" content="Trent Sterling (Tront) - Game Developer | Portfolio & Links">
+    <meta name="twitter:description" content="Explore Trent Sterling (Tront)'s work in game development, focusing on Unity, C#, VR, multiplayer systems, and innovative game tech.">
     <meta name="twitter:image" content="https://blog.tront.xyz/assets/img/tront.png">
     <link rel="icon" href="https://blog.tront.xyz/assets/img/tront.png" type="image/png">
     <style>
@@ -36,23 +39,7 @@
         .links a.game:hover { background-color: #e67e22; color: #121212; }
         .links a.social { color: #d4a5f0; background-color: #1e1e1e; }
         .links a.social:hover { background-color: #d4a5f0; color: #121212; }
-
-        .blurb {
-            font-size: 1.25rem;
-            color: #a0a0a0;
-            margin-top: 0.625rem;
-            margin-bottom: 0;
-            padding: 0 1.25rem;
-            max-width: 800px;
-            width: auto;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            font-weight: normal;
-            line-height: 1.4;
-            text-align: center;
-        }
-
+        .blurb { font-size: 1.25rem; color: #a0a0a0; margin-top: 0.625rem; margin-bottom: 0; padding: 0 1.25rem; max-width: 800px; width: auto; display: block; margin-left: auto; margin-right: auto; font-weight: normal; line-height: 1.4; text-align: center; }
         footer { margin-top: 1.875rem; font-size: 1.5rem; color: #b0b0b0; padding-bottom: 1.875rem; }
         @media (max-width: 48rem) {
             header h1 { font-size: 3.375rem; }
@@ -68,50 +55,47 @@
             .blurb { font-size: 1rem; }
             footer { font-size: 1.125rem; }
         }
-        ul {
-            font-size: 1.5rem;
-        }
-
-        ul li {
-            font-size: 1.5rem;
-        }
-        .container {
-            max-width: 100%;
-            width: 100%;
-        }
-
+        ul { font-size: 1.5rem; }
+        ul li { font-size: 1.5rem; }
+        .container { max-width: 100%; width: 100%; }
         @media (min-width: 800px) {
-            .container {
-                padding: 5rem;
-            }
-            .links a {
-                text-decoration: none;
-                font-size: 2.25rem;
-                padding: 1.875rem;
-                display: block;
-                border-radius: 0.9375rem;
-                transition: background-color 0.3s, color 0.3s;
-                font-weight: bold;
-                max-width: 800px;
-                width: 100%;
-                margin-left: auto;
-                margin-right: auto;
-            }
-
-            header img.logo {
-                max-width: 100px;
-                height: auto;
-                margin-bottom: 1.5rem;
-            }
-
-            .blurb {
-                max-width: 800px;
-                margin-left: auto;
-                margin-right: auto;
-            }
+            .container { padding: 5rem; }
+            .links a { text-decoration: none; font-size: 2.25rem; padding: 1.875rem; display: block; border-radius: 0.9375rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; max-width: 800px; width: 100%; margin-left: auto; margin-right: auto; }
+            header img.logo { max-width: 100px; height: auto; margin-bottom: 1.5rem; }
+            .blurb { max-width: 800px; margin-left: auto; margin-right: auto; }
         }
     </style>
-
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Trent Sterling",
+      "alternateName": "Tront",
+      "url": "https://tront.xyz/",
+      "image": "https://blog.tront.xyz/assets/img/tront.png",
+      "jobTitle": "Game Developer",
+      "description": "Game developer specializing in Unity, C#, VR, and multiplayer networking.",
+      "sameAs": [
+        "https://blog.tront.xyz",
+        "https://discord.gg/0hyoWZyM6y7kkFCN",
+        "http://youtube.com/user/MTOMalley",
+        "http://www.twitch.tv/trent_sterling",
+        "https://github.com/TrentSterling",
+        "https://twitter.com/Trent_Sterling",
+        "https://www.linkedin.com/in/trentdev",
+        "http://trent.itch.io/"
+      ],
+      "knowsAbout": ["Unity", "C#", "VR", "Virtual Reality", "Multiplayer Networking", "Game Development", "Procedural Generation", "Shaders", "NodeJS", "Web Development"],
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Self-Employed"
+      },
+      "mainEntityOfPage": {
+         "@type": "WebPage",
+         "@id": "https://tront.xyz/"
+      }
+    }
+    </script>
 </head>
 
 <body>
