--- a/index.html
+++ b/index.html
@@ -24,52 +24,81 @@
     <link rel="icon" href="https://blog.tront.xyz/assets/img/tront.png" type="image/png">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        html, body { height: 100%; font-family: Arial, sans-serif; background-color: #121212; color: #e0e0e0; display: flex; justify-content: center; align-items: center; }
-        .container { max-width: 56.25rem; width: 100%; text-align: center; display: flex; flex-direction: column; justify-content: space-between; height: 100%; padding: 3.75rem 1.875rem; }
-        header h1 { font-size: 4.5rem; }
-        header p { margin: 1.5rem 0 2.8125rem; color: #b0b0b0; font-size: 2.25rem; }
-        .section { margin: 3.75rem 0; }
-        .section p { font-size: 1.6875rem; margin-bottom: 1.875rem; }
-        .about-me { max-width: 75rem; text-align: left; margin: 0 auto; }
-        .about-me p, .about-me ul { font-size: 1.5rem; margin-bottom: 1rem; line-height: 1.6; }
-        .about-me h3 { font-size: 1.8rem; margin-top: 1.5rem; margin-bottom: 0.75rem; color: #1e90ff; }
-        .about-me ul { list-style-position: inside; padding-left: 0.5rem; }
-        .about-me ul li { margin-bottom: 0.5rem; }
-        .links { list-style: none; padding: 0; display: flex; flex-direction: column; justify-content: center; flex-grow: 1; }
-        .links li { margin: 1.5rem 0; }
-        .links a { text-decoration: none; font-size: 2.25rem; padding: 1.875rem; display: block; border-radius: 0.9375rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; }
+        html {
+            font-size: calc(7px + 0.5vw); /* Reduced base and vw scaling slightly */
+        }
+        body {
+             min-height: 100%;
+             font-family: Arial, sans-serif;
+             background-color: #121212;
+             color: #e0e0e0;
+             display: flex;
+             justify-content: center;
+             align-items: flex-start;
+             padding-top: 0.5rem;
+             line-height: 1.4;
+             }
+        .container {
+            max-width: 56.25rem;
+            width: 100%;
+            margin: 0 auto;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            min-height: calc(100vh - 1rem);
+            height: auto;
+            padding: 0 1.5rem 1rem 1.5rem;
+            justify-content: flex-start;
+            }
+        header { flex-shrink: 0; }
+        header h1 { font-size: 3.6rem; line-height: 1; margin-bottom: 0.1rem;} /* Adjusted rem */
+        header p { margin: 0.1rem 0 0.6rem; color: #b0b0b0; font-size: 1.5rem; } /* Adjusted rem */
+        header img.logo { display:block; margin-left:auto; margin-right:auto; max-width: 4.5rem; height: auto; margin-bottom: 0.1rem;} /* Adjusted rem */
+        main { flex-grow: 1; width: 100%; }
+        .section { margin: 0.8rem 0; width: 100%; }
+        .section h2 { font-size: 1.5rem; margin-bottom: 0.3rem; } /* Adjusted rem */
+        .about-me { text-align: left; margin: 0 auto; width: 100%; }
+        .about-me p, .about-me li { font-size: 1rem; margin-bottom: 0.25rem; line-height: 1.35; } /* Adjusted rem */
+        .about-me h3 { color: #1e90ff; font-size: 1.2rem; margin-top: 0.5rem; margin-bottom: 0.2rem; } /* Adjusted rem */
+        .about-me ul { list-style: none; padding-left: 0;}
+        .about-me li strong { font-weight: bold; }
+        .links { list-style: none; padding: 0; display: flex; flex-direction: column; justify-content: center; flex-grow: 1; gap: 0.3rem; }
+        .links li { margin: 0; }
+        .links a { text-decoration: none; font-size: 1.4rem; padding: 0.7rem; display: block; border-radius: 0.4rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; max-width: 30rem; width: 100%; margin-left:auto; margin-right:auto;} /* Adjusted rem */
         .links a.blog { color: #1e90ff; background-color: #1e1e1e; }
         .links a.blog:hover { background-color: #1e90ff; color: #121212; }
         .links a.game { color: #e67e22; background-color: #1e1e1e; }
         .links a.game:hover { background-color: #e67e22; color: #121212; }
         .links a.social { color: #d4a5f0; background-color: #1e1e1e; }
         .links a.social:hover { background-color: #d4a5f0; color: #121212; }
-        .blurb { font-size: 1.25rem; color: #a0a0a0; margin-top: 0.625rem; margin-bottom: 0; padding: 0 1.25rem; max-width: 800px; width: auto; display: block; margin-left: auto; margin-right: auto; font-weight: normal; line-height: 1.4; text-align: center; }
-        footer { margin-top: 1.875rem; font-size: 1.5rem; color: #b0b0b0; padding-bottom: 1.875rem; }
+        .blurb, footer p { font-size: 0.9rem; color: #a0a0a0; line-height: 1.2; text-align: center; } /* Adjusted rem */
+        .blurb { margin-top: 0.15rem; margin-bottom: 0; padding: 0 0.5rem; max-width: 30rem; width: auto; display: block; margin-left: auto; margin-right: auto; font-weight: normal; }
+        footer { margin-top: 0.8rem; color: #b0b0b0; padding-bottom: 0.8rem; flex-shrink: 0; }
+        footer p { color: inherit; }
+
         @media (max-width: 48rem) {
-            header h1 { font-size: 3.375rem; }
-            header p { font-size: 1.6875rem; }
-            .links a { font-size: 1.875rem; padding: 1.5rem; }
-            .blurb { font-size: 1.1rem; }
-            footer { font-size: 1.3125rem; }
-            .about-me p, .about-me ul { font-size: 1.3rem; }
-            .about-me h3 { font-size: 1.6rem; }
+            header h1 { font-size: 3rem; }
+            header p { font-size: 1.3rem; }
+            .section h2 { font-size: 1.3rem; }
+            .about-me p, .about-me li { font-size: 0.9rem; }
+            .about-me h3 { font-size: 1.1rem; }
+            .links a { font-size: 1.3rem; padding: 0.6rem; }
+            .blurb, footer p { font-size: 0.8rem; }
         }
         @media (max-width: 30rem) {
-            header h1 { font-size: 3rem; }
-            header p { font-size: 1.5rem; }
-            .links a { font-size: 1.6875rem; padding: 1.125rem; }
-            .blurb { font-size: 1rem; }
-            footer { font-size: 1.125rem; }
-            .about-me p, .about-me ul { font-size: 1.1rem; }
-            .about-me h3 { font-size: 1.4rem; }
+            header h1 { font-size: 2.5rem; }
+            header p { font-size: 1.1rem; }
+            .section h2 { font-size: 1.1rem; }
+            .about-me p, .about-me li { font-size: 0.8rem; }
+            .about-me h3 { font-size: 1rem; }
+            .links a { font-size: 1.1rem; padding: 0.5rem; }
+            .blurb, footer p { font-size: 0.75rem; }
         }
         .container { max-width: 100%; width: 100%; }
         @media (min-width: 800px) {
-            .container { padding: 5rem; }
-            .links a { text-decoration: none; font-size: 2.25rem; padding: 1.875rem; display: block; border-radius: 0.9375rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; max-width: 800px; width: 100%; margin-left: auto; margin-right: auto; }
-            header img.logo { max-width: 100px; height: auto; margin-bottom: 1.5rem; display: block; margin-left:auto; margin-right:auto;}
-            .blurb { max-width: 800px; margin-left: auto; margin-right: auto; }
+            .container { padding: 0.5rem 2rem 1rem 2rem; max-width: 56.25rem;}
+            .links a { max-width: 30rem; }
+            .blurb { max-width: 30rem; }
         }
     </style>
     <script type="application/ld+json">
@@ -115,35 +144,32 @@
 
         <main>
             <div class="section" id="about">
-                <h2>About Me</h2>
-                <div class="about-me">
-                     <p>
-                        <strong>Welcome! I'm Trent Sterling (Tront), a passionate and experienced game developer (gamedev) with over a decade dedicated to crafting engaging experiences using Unity and C#.</strong>
-                        My core specializations lie in high-performance VR development (aiming for 120Hz+), robust multiplayer networking solutions, and building solid gameplay systems. This page serves as my central hub – think of it as a personal 'Link Tree' or portfolio – connecting you to my various projects, my development blog where I share insights, and all my social and professional profiles online. If you're looking for a game developer focused on technical excellence in Unity, VR, and online games, you're in the right place.
+                 <h2>About Me</h2>
+                 <div class="about-me">
+                      <p>
+                        <strong>Welcome! I'm Trent Sterling (Tront), a passionate game developer (gamedev) with over 10 years crafting experiences in Unity and C#.</strong>
+                        My core focus? High-performance VR (120Hz+), robust multiplayer networking, and solid gameplay systems. This page is my central hub - a portfolio and 'Link Tree' connecting you to my projects, dev blog insights, and online profiles. If you seek technical excellence in Unity, VR, and online games, you're here.
                      </p>
-                     <p>My journey in game development started years ago with modding communities for games like Halo CE/2, Minecraft (creating popular mods), and Garry's Mod (developing custom gamemodes). These early experiences were invaluable, teaching me the fundamentals of game mechanics, scripting, community engagement, and the iterative process of development.</p>
-
-                     <h3>My Core Focus Areas as a Game Developer</h3>
+                     <p>My journey started modding Halo CE/2, Minecraft, and Garry's Mod. These taught me game mechanics, scripting, and community-driven development.</p>
+                     <h3>My Core Focus Areas</h3>
                      <ul>
-                         <li><strong>Unity Engine & C# Mastery:</strong> Extensive experience architecting and implementing high-performance systems for gameplay logic, AI behavior, UI, and complex multiplayer interactions within the Unity environment.</li>
-                         <li><strong>Virtual Reality (VR) Development & Optimization:</strong> Designing and building immersive VR experiences with a strong emphasis on performance optimization to achieve smooth, high-frame-rate (120Hz+) gameplay, crucial for user comfort and presence. Expertise in Oculus Quest and PC VR development.</li>
-                         <li><strong>Multiplayer Systems & Networking:</strong> Building scalable, reliable, and efficient cross-platform multiplayer backends and client-side prediction/interpolation. Focused on optimizing network traffic for smooth gameplay across diverse platforms (PC, Android, VR). Experience includes implementing crossplay functionality.</li>
-                         <li><strong>Shaders & Procedural Generation:</strong> Creating custom shaders for unique visual effects and optimizing rendering pipelines, particularly for VR constraints. Exploring procedural generation techniques to create dynamic, replayable game worlds and content.</li>
-                         <li><strong>Full-Stack Web Development (NodeJS Focus):</strong> Leveraging web technologies (NodeJS, Phaser, WebSockets) for backend services, companion apps, or web-based game elements, including IoT integration explorations.</li>
+                         <li><strong>Unity Engine & C# Mastery:</strong> Architecting high-performance systems for gameplay, AI, UI, and multiplayer within Unity.</li>
+                         <li><strong>Virtual Reality (VR) Development & Optimization:</strong> Building immersive VR experiences optimized for 120Hz+ comfort and presence (Oculus Quest & PC VR).</li>
+                         <li><strong>Multiplayer Systems & Networking:</strong> Scalable, efficient cross-platform multiplayer (PC, Android, VR) with optimized network traffic and crossplay.</li>
+                         <li><strong>Shaders & Procedural Generation:</strong> Creating custom shaders and exploring procedural generation for dynamic worlds, especially for VR.</li>
+                         <li><strong>Full-Stack Web Development (NodeJS Focus):</strong> Using NodeJS, Phaser, WebSockets for backend services, companion apps, and web elements.</li>
                      </ul>
-
-                     <h3>Professional Background & Technical Journey</h3>
-                     <p>Transitioning from modding, my focus shifted towards indie game development, tackling the challenges of creating complete games from concept to release. I have a deep interest in the technical aspects of game development, constantly exploring ways to optimize network traffic, improve rendering performance, and implement cutting-edge techniques.</p>
-                     <p>Beyond core game development, I've dabbled in related fields like machine learning applications in games, IoT projects for home automation, and integrating various technologies to push the boundaries of interactive experiences.</p>
-
+                     <h3>Technical Background</h3>
+                     <p>From modding, I shifted to indie game development, focusing on the technical challenges of optimizing network traffic and rendering performance. I constantly explore cutting-edge tech.</p>
+                     <p>Beyond game dev, I've explored machine learning, IoT, and home automation, always expanding my skillset.</p>
                      <h3>Additional Skills</h3>
                      <ul>
-                         <li><strong>Videography & Content Creation:</strong> Producing development logs (devlogs), tutorials, game trailers, and streaming gameplay on platforms like YouTube and Twitch.</li>
-                         <li><strong>Web Design & Development:</strong> Crafting minimalist, functional, and user-friendly websites and web applications (like this links hub!).</li>
-                         <li><strong>3D Modeling & Asset Optimization:</strong> Basic proficiency in asset creation, modification, and optimization using tools like Blender, ensuring assets are game-ready.</li>
-                         <li><strong>Graphic Design (Photoshop):</strong> Creating textures, UI elements, promotional graphics, and other visual assets required for game projects and branding.</li>
+                         <li><strong>Videography & Content Creation:</strong> Producing devlogs, tutorials, trailers (YouTube/Twitch).</li>
+                         <li><strong>Web Design & Development:</strong> Crafting minimalist, functional websites and apps.</li>
+                         <li><strong>3D Modeling & Asset Optimization:</strong> Proficiency in Blender for game-ready assets.</li>
+                         <li><strong>Graphic Design (Photoshop):</strong> Creating textures, UI, and promotional graphics.</li>
                      </ul>
-                </div>
+                 </div>
             </div>
 
             <div class="section" id="blog">
@@ -173,7 +199,7 @@
                     </li>
                     <li>
                         <a class="game" href="https://trent.itch.io/" target="_blank">View All My Games on itch.io</a>
-                        <p class="blurb"></p>
+                         <p class="blurb"></p>
                     </li>
                 </ul>
             </div>
@@ -194,7 +220,7 @@
         </main>
 
         <footer>
-            <p>© <span id="current-year"></span> Trent Sterling (Tront). All rights reserved.</p>
+            <p>© <span id="current-year"></span> Trent Sterling (Tront). Game Developer. All rights reserved.</p>
         </footer>
 
         <script>
