--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html {
-            font-size: calc(7px + 0.5vw); /* Reduced base and vw scaling slightly */
+            font-size: max(0.85rem, calc(4px + 0.6vw));
         }
         body {
              min-height: 100%;
@@ -51,54 +51,40 @@
             justify-content: flex-start;
             }
         header { flex-shrink: 0; }
-        header h1 { font-size: 3.6rem; line-height: 1; margin-bottom: 0.1rem;} /* Adjusted rem */
-        header p { margin: 0.1rem 0 0.6rem; color: #b0b0b0; font-size: 1.5rem; } /* Adjusted rem */
-        header img.logo { display:block; margin-left:auto; margin-right:auto; max-width: 4.5rem; height: auto; margin-bottom: 0.1rem;} /* Adjusted rem */
+        header h1 { font-size: 3.2rem; line-height: 1; margin-bottom: 0.1rem;}
+        header p { margin: 0.1rem 0 0.6rem; color: #b0b0b0; font-size: 1.4rem; }
+        header img.logo { display:block; margin-left:auto; margin-right:auto; max-width: 4.5rem; height: auto; margin-bottom: 0.1rem;}
         main { flex-grow: 1; width: 100%; }
         .section { margin: 0.8rem 0; width: 100%; }
-        .section h2 { font-size: 1.5rem; margin-bottom: 0.3rem; } /* Adjusted rem */
+        .section h2 { font-size: 1.5rem; margin-bottom: 0.3rem; }
         .about-me { text-align: left; margin: 0 auto; width: 100%; }
-        .about-me p, .about-me li { font-size: 1rem; margin-bottom: 0.25rem; line-height: 1.35; } /* Adjusted rem */
-        .about-me h3 { color: #1e90ff; font-size: 1.2rem; margin-top: 0.5rem; margin-bottom: 0.2rem; } /* Adjusted rem */
+        .about-me p, .about-me li { font-size: 1rem; margin-bottom: 0.25rem; line-height: 1.35; }
+        .about-me h3 { color: #1e90ff; font-size: 1.2rem; margin-top: 0.5rem; margin-bottom: 0.2rem; }
         .about-me ul { list-style: none; padding-left: 0;}
         .about-me li strong { font-weight: bold; }
         .links { list-style: none; padding: 0; display: flex; flex-direction: column; justify-content: center; flex-grow: 1; gap: 0.3rem; }
         .links li { margin: 0; }
-        .links a { text-decoration: none; font-size: 1.4rem; padding: 0.7rem; display: block; border-radius: 0.4rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; max-width: 30rem; width: 100%; margin-left:auto; margin-right:auto;} /* Adjusted rem */
+        .links a { text-decoration: none; font-size: 1.4rem; padding: 0.7rem; display: block; border-radius: 0.4rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; max-width: 30rem; width: 100%; margin-left:auto; margin-right:auto;}
         .links a.blog { color: #1e90ff; background-color: #1e1e1e; }
         .links a.blog:hover { background-color: #1e90ff; color: #121212; }
         .links a.game { color: #e67e22; background-color: #1e1e1e; }
         .links a.game:hover { background-color: #e67e22; color: #121212; }
         .links a.social { color: #d4a5f0; background-color: #1e1e1e; }
         .links a.social:hover { background-color: #d4a5f0; color: #121212; }
-        .blurb, footer p { font-size: 0.9rem; color: #a0a0a0; line-height: 1.2; text-align: center; } /* Adjusted rem */
+        .blurb, footer p { font-size: 0.9rem; color: #a0a0a0; line-height: 1.2; text-align: center; }
         .blurb { margin-top: 0.15rem; margin-bottom: 0; padding: 0 0.5rem; max-width: 30rem; width: auto; display: block; margin-left: auto; margin-right: auto; font-weight: normal; }
         footer { margin-top: 0.8rem; color: #b0b0b0; padding-bottom: 0.8rem; flex-shrink: 0; }
         footer p { color: inherit; }
 
         @media (max-width: 48rem) {
-            header h1 { font-size: 3rem; }
-            header p { font-size: 1.3rem; }
-            .section h2 { font-size: 1.3rem; }
-            .about-me p, .about-me li { font-size: 0.9rem; }
-            .about-me h3 { font-size: 1.1rem; }
-            .links a { font-size: 1.3rem; padding: 0.6rem; }
-            .blurb, footer p { font-size: 0.8rem; }
         }
         @media (max-width: 30rem) {
-            header h1 { font-size: 2.5rem; }
-            header p { font-size: 1.1rem; }
-            .section h2 { font-size: 1.1rem; }
-            .about-me p, .about-me li { font-size: 0.8rem; }
-            .about-me h3 { font-size: 1rem; }
-            .links a { font-size: 1.1rem; padding: 0.5rem; }
-            .blurb, footer p { font-size: 0.75rem; }
         }
         .container { max-width: 100%; width: 100%; }
         @media (min-width: 800px) {
             .container { padding: 0.5rem 2rem 1rem 2rem; max-width: 56.25rem;}
-            .links a { max-width: 30rem; }
-            .blurb { max-width: 30rem; }
+            .links a { max-width: 24rem; } /* Reduced max-width */
+            .blurb { max-width: 24rem; } /* Reduced max-width */
         }
     </style>
     <script type="application/ld+json">
